[package]
name = "modinfo_7dtd"
version = "0.1.0"
authors = ["Donovan C. Young <dyoung522@gmail.com>"]
description = "Read/Write '7 Days to Die' ModInfo.xml files"
edition = "2021"
rust-version = "1.73"
readme = "README.md"
license = "MIT"
keywords = ["7dtd", "7d2d", "7 days to die", "modinfo", "xml", "mod", "modding"]

[lib]
name = "modinfo"
crate-type = ["lib"]

[dependencies]
convert_case = "0.6.0"
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
lenient_semver_parser = "0.4.2"
lenient_semver_version_builder = "0.4.2"
lenient_version = "0.4.2"
quick-xml = { version = "0.31.0", features = ["serialize"] }
semver = "1.0.20"
