[package]
name = "modinfo_7dtd"
version = "0.1.1"
authors = ["Donovan C. Young <dyoung522@gmail.com>"]
description = "Read/Write '7 Days to Die' ModInfo.xml files"
edition = "2021"
rust-version = "1.74"
readme = "README.md"
homepage = "https://github.com/donovanmods/modinfo_7dtd"
repository = "https://github.com/donovanmods/modinfo_7dtd"
documentation = "https://docs.rs/modinfo_7dtd"
license = "MIT"
keywords = ["7dtd", "game-dev", "modinfo", "xml", "modding"]
categories = [
  "data-structures",
  "development-tools",
  "game-development",
  "parser-implementations",
]
exclude = [".trunk/*", "tests/*", "src/tests/*"]

[lib]
name = "modinfo"
crate-type = ["lib"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
convert_case = "0.6.0"
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
lenient_semver_parser = "0.4.2"
lenient_semver_version_builder = "0.4.2"
lenient_version = "0.4.2"
quick-xml = { version = "0.31.0", features = ["serialize"] }
semver = "1.0.20"
thiserror = "1.0.50"
